methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:11: error: expected class or object definition
def ligne2(c:Color,p:Color){
^FlowerCase:19: error: expected class or object definition
def ligne(c:Color, p1:Color, p2:Color){
^FlowerCase:28: error: expected class or object definition
def retourligne(){
^FlowerCase:42: error: expected class or object definition
def flower(c:Color, p:Color){
^FlowerCase:59: error: expected class or object definition
def marquerSol(){
^FlowerCase:64: error: Unmatched closing brace '}' ignored here
}
^